# ChangeLog for media-sound/abcmidi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/abcmidi/ChangeLog,v 1.52 2014/02/06 10:09:51 radhermit Exp $

*abcmidi-2014.02.05 (06 Feb 2014)

  06 Feb 2014; Tim Harder <radhermit@gentoo.org> +abcmidi-2014.02.05.ebuild:
  Version bump.

*abcmidi-2014.01.20 (22 Jan 2014)

  22 Jan 2014; Tim Harder <radhermit@gentoo.org> +abcmidi-2014.01.20.ebuild:
  Version bump.

*abcmidi-2014.01.05 (11 Jan 2014)

  11 Jan 2014; Tim Harder <radhermit@gentoo.org> +abcmidi-2014.01.05.ebuild:
  Version bump.

*abcmidi-2013.12.25 (28 Dec 2013)

  28 Dec 2013; Tim Harder <radhermit@gentoo.org> +abcmidi-2013.12.25.ebuild:
  Version bump.

  16 Dec 2013; Tim Harder <radhermit@gentoo.org> -abcmidi-2013.05.10.ebuild,
  -abcmidi-2013.06.09.ebuild, -abcmidi-2013.09.15.ebuild,
  -abcmidi-2013.10.01.ebuild, -abcmidi-2013.10.22.ebuild,
  -abcmidi-2013.11.05.ebuild:
  Remove old.

*abcmidi-2013.12.14 (16 Dec 2013)

  16 Dec 2013; Tim Harder <radhermit@gentoo.org> +abcmidi-2013.12.14.ebuild:
  Version bump.

*abcmidi-2013.11.26 (02 Dec 2013)

  02 Dec 2013; Tim Harder <radhermit@gentoo.org> +abcmidi-2013.11.26.ebuild:
  Version bump.

*abcmidi-2013.11.17 (23 Nov 2013)

  23 Nov 2013; Tim Harder <radhermit@gentoo.org> +abcmidi-2013.11.17.ebuild:
  Version bump.

*abcmidi-2013.11.05 (12 Nov 2013)

  12 Nov 2013; Tim Harder <radhermit@gentoo.org> +abcmidi-2013.11.05.ebuild:
  Version bump.

*abcmidi-2013.10.22 (27 Oct 2013)

  27 Oct 2013; Tim Harder <radhermit@gentoo.org> +abcmidi-2013.10.22.ebuild:
  Version bump.

*abcmidi-2013.10.01 (17 Oct 2013)

  17 Oct 2013; Tim Harder <radhermit@gentoo.org> +abcmidi-2013.10.01.ebuild:
  Version bump.

*abcmidi-2013.09.15 (18 Sep 2013)

  18 Sep 2013; Tim Harder <radhermit@gentoo.org> -abcmidi-2013.09.10.ebuild,
  +abcmidi-2013.09.15.ebuild:
  Version bump and remove old.

*abcmidi-2013.09.10 (16 Sep 2013)
