@@ -9,6 +9,7 @@ DIST abcMIDI-2013-12-25.zip 503859 SHA256 29ba85319a4226c3e534c7b211db44d822e0a6
 DIST abcMIDI-2014-01-05.zip 504092 SHA256 374bbc6463a5c68e4bdd6bc505acc0cf2b5b8141c7d0acd03ad726815253f346 SHA512 c58f44e2034a9309852335c084c88fdbbfabbe9bbe3da7c0ab3e01686f10c97c14ff59fc53592fc5894eafe148ce71814fe328840e12eac1e2e0ee65510e3e74 WHIRLPOOL 366116c349507f8189c92a213f12bd0f08a54a526ac1eeae29621ee709eb476bcb2208b057de827d98ff1ded21e6da4c9fb3d901a20216897f2922d924baf833
 DIST abcMIDI-2014-01-20.zip 506224 SHA256 dee17dd88e0bcc16314fbb430504203b6f1093c3d1a7d873faf27788622543a9 SHA512 89cb7d418b827384d4ab390d7bacac6490587ac7ae858b9ab2e90c6d8ab534d589c069f7e0b26167f591e42ec823ddc922d0d952da2c32bcf554e2231229fc2b WHIRLPOOL 1dbdb5f2c369c791b4c7814ca607bacc2ab3e74bddf1b1b133e8dbc189d3a6979a509515c97325969f40f9359651f9ddc8b196a79e697e8fefc8f863dc1cc032
 DIST abcMIDI-2014-02-05.zip 506837 SHA256 bd4acfc7e7a296d2dece7ef46154e7b4733ee46eb94a5e2a57e1982064c71e35 SHA512 8654c9a396e1522c144e8a5893832d64d76bb34496b2f3a948649ff1e85f85ca7e91a6cbfbf49f769047c4c78c9f9d9029a1943c2bc8aad7d6620a57408f65da WHIRLPOOL 2ed3f40008111029c3b0073b7e14073ca8f6e6df933dfeebe0e798ace89ada03311ba1d771cdd1f67a363d818bfefe8598c00cffec2e9ba9a2117945bc8654b8
+DIST abcMIDI-2014-04-03.zip 507208 SHA256 e595b705adb513ea3f5e8b9a503f4e04872b1ad14a11bdfaa006a9ab8a0f5309 SHA512 1f28f12992818b3fbe92cbc2418d2a9376a3406abc3dee8683744c03ef267a432abdc26e638ad2b72eea835aeb6cf4b31cedba89d0ae998a3dd0044f7f207c80 WHIRLPOOL 5ffaa3250b3c26d1ca813b9222e9e1d830f4c03acd03e73778b868f72da491ca9d7ba2f3559bfe440626ac728c91e41f0ef0b1eae36991ed7d71a7a31eb735bd
 EBUILD abcmidi-2013.11.17.ebuild 955 SHA256 9fbf7a467001f6b6843a9e1bad3263486b0c63e3de195089359f1d18aa1386b1 SHA512 3c44c792b0147657336c53a53795aa0878711ae21deea501c4196ca5d361a0eb5c5a0f6c0da12f091b383cf4e736a3ea929ff16e6747bfb1a3aacc46e19e801f WHIRLPOOL aaac3d48d7802fd2ef6ca01445cd36ed21506b122f59385eac352d340289f0c49a8fda3335f59145004de6060673d1408c44f7ac2a22a6a5252803d5ccf5ec8a
 EBUILD abcmidi-2013.11.26.ebuild 955 SHA256 410e52d3de774822fdce8a8342bc02baea46a9da6d76e6cfa738af8159baf545 SHA512 354399ec9fc0fd00d41f196f7de104ebcbd9215dfe53d3a8eb453d02dce18f7718649df807ae81417a754980bcbc4be157bd1ec2f3d4837ec4b9a82bacc87fb9 WHIRLPOOL 700b85b53c2e5a76ea973adca52c05ce658a27490dc35950e1b9bfe415eea0913e37fc28c0abe655dc0f10b39821e018ac60a0a67ccd5b455830c3edf445ba2b
 EBUILD abcmidi-2013.12.14.ebuild 955 SHA256 b178e6ac19cc14eca25ead4734647fa6f99fc01db8f741f12ba80649f42dbd65 SHA512 c518a35554de4ca544788522e3d27da7b73596fc7ebdda7b3882e2a4f962be45451d31dcf71b2dea20db4b9c19add0a6c988f74c549ff5e8b32aad8bd15bf6e6 WHIRLPOOL a1967b12940271f69b74750198dfd75ffa7fc82213fd5ac7693859d6352627edb5888a59248ae2303eccb347c29c48ce268bdc3d890f2761f6de967e69bef47a
@@ -16,16 +17,17 @@ EBUILD abcmidi-2013.12.25.ebuild 955 SHA256 c3a86bbb7b4f3cc4f1be870f251f3d0030c5
 EBUILD abcmidi-2014.01.05.ebuild 955 SHA256 788218cd5c7c9edc76eaadf32193cb1eb8db4bcde3ca9f96636a1acd382f0c3a SHA512 8132ff328ede927c1017fb19bb0559ff3bb173d8ab6a9ff5de95bfdb14aca9177f7cdcac567b7f1a0216c1030f9862b1d7127cb1aef325a818e3db506b0651c1 WHIRLPOOL ca17c849d0601ab43e0c306180a7cf53513bc329d7986054049038ae68c13d2e1e2c982c65da0cde0250b54939b1a4a4eaa9fb460c1e82a9cedbf0c384f69894
 EBUILD abcmidi-2014.01.20.ebuild 955 SHA256 8e8bcf4926db914197e06c9b2abc56d0ce03bdf9720b4192d2f1fa8ee2f4eee3 SHA512 2fd66ae1abfe274c5877413ce26ca842d7c2e6ff8d12a9037189c181edd1c52bbc7752028ceebab87e98f844c47c1d75de9b7358367a28f717a02a2f8255c1ce WHIRLPOOL 4852f97b63511b5d7957af6a875970e54277d1cb0bf61f5b8f63648265ed531733019f05d32239b74eec0a344f0c67d507d1f49fceed8971726eb957783903b7
 EBUILD abcmidi-2014.02.05.ebuild 955 SHA256 dbc5d29470f69ca32253c14eba52a005e7831bb53028a1e828751f6a2b48e90a SHA512 000d97f75e3d7f0e38cc31a56775f5c321d0a9100c45923f8d9734a61b59555458fc5d59b94c12159c2c71a1d599b7d09a5c9866ef940e426924280d25024c55 WHIRLPOOL 1079a9dd03ded1f43840601fc23d2b15ec71511fc1a355b22d09836ff6e12fea75e7edf1628ce839ae218315c6efafb3e8ce5ccb3723cca8cd945c9276ace48c
-MISC ChangeLog 7247 SHA256 16314dd8aa7cb47b58bccfac6f77166be9724a2c6180ac9dc86ee8ac9dc411b5 SHA512 66e4916c91e6475a607fe45051d5cb77c0ca38996f026139909d3b65bafa7ea61c9a2de57139fed2ed4417cc420930bb6d25548f1b652120dd0f5397af367403 WHIRLPOOL 8c5e08aa9ebc75fb7f934b1ccee8aa38ab3844d871119788f0befc5848785dfebd9c971e45c4afb94d8db2e23f1220475505f5d72c281f92bf31d27bfcdd4432
+EBUILD abcmidi-2014.04.03.ebuild 955 SHA256 a51ad85f29ecb0771fad6f05cccea9c4dfaa8e7530e40fd6da9b190345569496 SHA512 8c460eb80e0ff23efb0c9c6db8a47b4cf105f5050cb668d13a6edf4b9221d657a3c59564b74a276510feb3ff0c6789f26ada890c97f668b5736386deb5d4cdcd WHIRLPOOL 90413e376eeb76b9c7767684a668e5526057fcfc36371af2c76834d372952f306fa3c32102dd2f493c345ac81badaec040c4c3a523e20ed0e7e004e88dea7426
+MISC ChangeLog 7376 SHA256 6f310be3d45d790b18fa093644969e7d4a1f54267b6adfd4f678367d51cb68fa SHA512 0aa9b2d214b2142a5649160e7d18a774281603edc923eefbad4595c12d62541c0c7a2f7af526fef2e2257a1f6ccb726362132906e532e34aa6dfff63926072ab WHIRLPOOL 764194e60913987b3eee850c41185f47da069d239ad24cf2ee4b4260598327ff88134ce69ca549f6886635a2a8e3015503ff37b94b04e71ac8709f65b9e63cfe
 MISC metadata.xml 158 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b SHA512 90f74979d228a35f81de50665ead63d228bc4f0d11f3def4832c9607f4242cbc4562db0a123bdcf2c4b6e0be78fc5565a65f75cdb53ed4c8d45544ebf74255dc WHIRLPOOL a90483bd4fa01ed5fa21bfe9f59c11b97c793146e3031eae342a3355c6dc2e4ef2b356af0bf711b5e16e16551c91d63ecdbb48e708df606017264e8bff5e9fe9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJS8190AAoJEEqz6FtPBkyjOt4H/35SZ0Jk/CtO7YS2CpO3X8Cn
-a41tmSzlr/xUtF6rNTFNXWVVnu8JPcQ+sLIdnI47fSQHKqvLMpfoCYV46KQ/I1U+
-9IppF47gAeW11sIuJvkN6KpxpXccxDAE0WGOX/XL4bF4BKatexsDdye3ubATrHIk
-CUbPHdq3c0pAUv+mVqpuQk+6hbVmv0SdI9qm+oWpsHICm/zNwoCeaT2zSsjy0R/0
-rlYxc5StL6vGa6W0ix+ik104CJ3GQiy5mI2zguTdnCr+Nh1NIFfO7zdNb0yf3v0P
-GOoE1g9cFq1OltaQ797RK0z8ydJSYR4aPbd7OA8Qb3vnHuTlm9J2Qy5FV/xZexU=
-=mpln
+iQEcBAEBCAAGBQJTPmmVAAoJEEqz6FtPBkyjN9IIAIg/DJsFzaSQcGnkdYVA+/ei
+5l6EFhj9KavVdpMPK2ud+e+ihlIHaioJ7LhUAc8TXdOyRUraQF24U53y6Qat/4mE
++W16Gqr0sUZx4TfyNNAyOEXObkivYiwJj1LeaVZHZ4DWT9r6lrg3R8coy6cimFxj
+Y/yEnB091w7pp1urBYA+Tae1YyjQh7eDyx0ZwviLlNa0tOjA7reZQO4+Oi78RTDe
+4XNCmCCJgt/J7idDAvw/RpNuEtdlycPHxobCG5t6wb/TzTHWXJMDmPrlCYnCDg+i
+7PI5rf7XNX1vizmD6vMEtGoESSVnzBmSHZ75VZorG740ngcHop2PLu5++WGw440=
+=1D37
 -----END PGP SIGNATURE-----
