@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/abcmidi
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/abcmidi/ChangeLog,v 1.52 2014/02/06 10:09:51 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/abcmidi/ChangeLog,v 1.53 2014/04/04 08:13:06 radhermit Exp $
+
+*abcmidi-2014.04.03 (04 Apr 2014)
+
+  04 Apr 2014; Tim Harder <radhermit@gentoo.org> +abcmidi-2014.04.03.ebuild:
+  Version bump.
 
 *abcmidi-2014.02.05 (06 Feb 2014)
 
